      directories) or over 1 week old (for running-routers lists).
    - Do not warn when individual nodes in the configuration's EntryNodes,
      ExitNodes, etc are down: warn only when all possible nodes
      are down. (Fixes bug 348.)
    - Always remove expired routers and networkstatus docs before checking
      whether we have enough information to build circuits. (Fixes
      bug 373.)


Changes in version 0.1.2.7-alpha - 2007-02-06
  o Major bugfixes (rate limiting):
    - Servers decline directory requests much more aggressively when
      they're low on bandwidth. Otherwise they end up queueing more and
      more directory responses, which can't be good for latency.
    - But never refuse directory requests from local addresses.
    - Fix a memory leak when sending a 503 response for a networkstatus
      request.
    - Be willing to read or write on local connections (e.g. controller
      connections) even when the global rate limiting buckets are empty.
    - If our system clock jumps back in time, don't publish a negative
      uptime in the descriptor. Also, don't let the global rate limiting
      buckets go absurdly negative.
    - Flush local controller connection buffers periodically as we're
      writing to them, so we avoid queueing 4+ megabytes of data before
      trying to flush.

  o Major bugfixes (NT services):
    - Install as NT_AUTHORITY\LocalService rather than as SYSTEM; add a
      command-line flag so that admins can override the default by saying
      "tor --service install --user "SomeUser"".  This will not affect
      existing installed services.  Also, warn the user that the service
      will look for its configuration file in the service user's
      %appdata% directory.  (We can't do the 'hardwire the user's appdata
      directory' trick any more, since we may not have read access to that
      directory.)

  o Major bugfixes (other):
    - Previously, we would cache up to 16 old networkstatus documents